fix: section max-height on mobile

--- a/app/src/components/Draggable/kanban.scss
+++ b/app/src/components/Draggable/kanban.scss
@@ -107,6 +107,7 @@
     scroll-snap-type: inline mandatory;
     &__section {
       min-width: 98vw;
+      max-height: 80vh;
       scroll-snap-align: center;
     }
   }
